@@ -1,3 +1,8 @@
+2013-06-16  Jesse  <jesse.emond@hotmail.com>
+
+	* Client.cs:
+	* DrawableChampion.cs: 
+
 2013-06-11  Jesse  <jesse.emond@hotmail.com>
 
 	* Client.cs:
